# estruturando_workshop

./: README.md  pyproject.toml
app/scrapping/: main.py  pipeline.py  scrapping.py
