[tool.poetry]
name = "project-1"
version = "0.1.0"
description = "Webscrapping das estatísticas de SSP sobre crimes contra a mulher"
authors = ["Thomás Freire"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
selectolax = "^0.3.17"
requests = "^2.31.0"
datetime = "^5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
